<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.markautomation.hydracontroller.Controller"
    android:background="#fffbc2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Manual Mode"
        android:id="@+id/txtManualMode"
        android:textColor="#000000"
        android:textSize="8pt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/switch1"
        android:checked="false"
        android:background="#d1dbff"
        android:textStyle="bold"
        android:textOn="ON"
        android:textOff="OFF"
        android:clickable="true"
        android:paddingLeft="30dp"
        android:layout_below="@+id/txtManualMode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/LeftButton"
        android:id="@+id/Left"
        android:contentDescription="@string/LeftButton"
        android:src="@drawable/arrowleft"
        android:longClickable="true"
        android:clickable="true"
        android:background="@drawable/bg_button"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/UpButton"
        android:id="@+id/Up"
        android:contentDescription="@string/UpButton"
        android:src="@drawable/arrowup"
        android:longClickable="true"
        android:clickable="true"
        android:background="@drawable/bg_button"
        android:nestedScrollingEnabled="false"
        android:layout_alignTop="@+id/switch1"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/DownButton"
        android:id="@+id/Down"
        android:contentDescription="@string/DownButton"
        android:src="@drawable/arrowdown"
        android:longClickable="true"
        android:clickable="true"
        android:background="@drawable/bg_button"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/Up"
        android:layout_alignStart="@+id/Up" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:text="@string/RightButton"
        android:id="@+id/Right"
        android:layout_gravity="center_horizontal|top"
        android:contentDescription="@string/RightButton"
        android:src="@drawable/arrowright"
        android:visibility="visible"
        android:longClickable="true"
        android:clickable="true"
        android:background="@drawable/bg_button"
        android:layout_alignTop="@+id/Left"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/settings"
        android:layout_alignTop="@+id/txtManualMode"
        android:layout_alignRight="@+id/Right"
        android:layout_alignEnd="@+id/Right" />

</RelativeLayout>
